[package]
name = "expander"
version = "1.0.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Expands proc macro output to a file, to enable easier debugging"
homepage = "https://ahoi.io"
repository = "https://github.com/drahnr/expander.git"

[dependencies]
fs-err = "2"
proc-macro2 = "1"
quote = "1"
blake2 = "0.10"
syn = { version = "1", optional = true, default-features = false }

[dev-dependencies]
baz = { path = "./tests/baz" }
syn = { version = "1", features = ["extra-traits", "full"] }

[features]
default = ["syndicate"]
syndicate = ["syn"]
