[package]
name = "expander"
version = "2.0.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Expands proc macro output to a file, to enable easier debugging"
homepage = "https://ahoi.io"
repository = "https://github.com/drahnr/expander.git"

[dependencies]
fs-err = "2"
proc-macro2 = "1"
quote = "1"
blake2 = { version = "0.10", default-features = false }
syn = { version = "2", optional = true, default-features = false }

[dev-dependencies]
baz = { path = "./tests/baz" }
syn = { version = "2", features = ["extra-traits", "full"] }

[features]
default = [ "std", "syndicate" ]
std = [ "blake2/std" ]
syndicate = [ "syn" ]
