[package]
name = "expander"
version = "2.2.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Expands proc macro output to a file, to enable easier debugging"
homepage = "https://ahoi.io"
repository = "https://github.com/drahnr/expander.git"
rust-version = "1.65"

[dependencies]
fs-err = "2"
proc-macro2 = "1"
quote = "1"
blake2 = "0.10"
syn = { version = "2", optional = true, default-features = false }
prettyplease = { version = "0.2", optional = true, default-features = false }
file-guard = "0.2.0"

[dev-dependencies]
baz = { path = "./tests/baz" }
syn = { version = "2", features = ["extra-traits", "parsing", "full"] }

[features]
default = ["syndicate", "pretty"]
syndicate = ["syn"]
pretty = ["prettyplease", "syn/parsing", "syn/full"]
