[package]
name = "baz"
version = "0.0.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://ahoi.io"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
expander = { path = "../..", " version" = "1" }
